--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -44,18 +44,18 @@
                 </div>
 
                 <ul class="nav navbar-nav navbar-right pull-right">
-                    <li class="dropdown">
-                        <a th:href="@{index.html}" class="dropdown-toggle profile" data-toggle="dropdown"
-                           aria-expanded="true"><img th:src="${commons.gravatar(session.login_user.email)}" alt="user-img"
-                                                     class="img-circle"/> </a>
-                        <ul class="dropdown-menu">
+<!--                    <li class="dropdown">-->
+<!--                        <a th:href="@{index.html}" class="dropdown-toggle profile" data-toggle="dropdown"-->
+<!--                           aria-expanded="true"><img th:src="${commons.gravatar(session.login_user.email)}" alt="user-img"-->
+<!--                                                     class="img-circle"/> </a>-->
+<!--                        <ul class="dropdown-menu">-->
 <!--                            <li><a th:href="@{${commons.site_url()}}" target="_blank"><i class="fa fa-eye"-->
 <!--                                                                                         aria-hidden="true"></i>-->
 <!--                                查看网站</a></li>-->
 <!--                            <li><a th:href="@{/admin/profile}"><i class="fa fa-sun-o"></i> 个人设置</a></li>-->
-                            <li><a th:href="@{/admin/logout}"><i class="fa fa-sign-out"></i> 注销</a></li>
-                        </ul>
-                    </li>
+<!--                            <li><a th:href="@{/admin/logout}"><i class="fa fa-sign-out"></i> 注销</a></li>-->
+<!--                        </ul>-->
+<!--                    </li>-->
                 </ul>
             </div>
         </div>
@@ -65,11 +65,11 @@
     <div class="sidebar-inner slimscrollleft">
         <div id="sidebar-menu">
             <ul>
-                <li th:class="${active}=='home'?'active':''">
-                    <a th:href="@{/admin/index}"
-                       th:class="${active}=='home'?'waves-effect active':'waves-effect'"><i
-                            class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>
-                </li>
+<!--                <li th:class="${active}=='home'?'active':''">-->
+<!--                    <a th:href="@{/admin/index}"-->
+<!--                       th:class="${active}=='home'?'waves-effect active':'waves-effect'"><i-->
+<!--                            class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>-->
+<!--                </li>-->
 <!--                <li th:class="${active}=='publish'?'active':''">-->
 <!--                    <a th:href="@{/admin/article/publish}"-->
 <!--                       th:class="${active}=='publish'?'waves-effect active':'waves-effect'"><i-->
@@ -84,11 +84,11 @@
                     <a th:href="@{/admin/page}" th:class="${active}=='page'?'waves-effect active':'waves-effect'"><i
                             class="fa fa-file-text" aria-hidden="true"></i><span> 页面管理 </span></a>
                 </li>
-                <li th:class="${active}=='comments'?'active':''">
-                    <a th:href="@{/admin/comments}"
-                       th:class="${active}=='comments'?'waves-effect active':'waves-effect'"><i
-                            class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span></a>
-                </li>
+<!--                <li th:class="${active}=='comments'?'active':''">-->
+<!--                    <a th:href="@{/admin/comments}"-->
+<!--                       th:class="${active}=='comments'?'waves-effect active':'waves-effect'"><i-->
+<!--                            class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span></a>-->
+<!--                </li>-->
 <!--                <li th:class="${active}=='category'?'active':''">-->
 <!--                    <a th:href="@{/admin/category}"-->
 <!--                       th:class="${active}=='category'?'waves-effect active':'waves-effect'"><i-->
